use :doc: role to link internal pages

--- a/2011/03/31/000100.rst
+++ b/2011/03/31/000100.rst
@@ -107,13 +107,13 @@
 新潟に行って、田植え体験や農家泊をしました。
 農家泊メンバーが前出の中1番の友人(テニス部副部長)とテニス部部長。
 この修学旅行は俺にとってとてもいい経験でした。
-`修学旅行 - yosida95 on Hatena </2011/03/31/000100.rst>`__
+:doc:`/2010/05/15/221958`
 
 つぎが運動会。
 ソーラン節と組体操、そしてムカデ競争をやりました。
 そして生徒会副会長な俺は開会宣言をしました。
 生徒会席にいましたのでクラスの応援席とは別にいましたが、何人か自分の席に誘いこんで話したり、徒競走の結果を競馬のように予想したり、などしていました。
-`Why don't you do your best? - yosida95 on Hatena </2010/06/05/220026.html>`__
+:doc:`/2010/06/05/220026`
 
 次は、夏休みを挟んでボランティア活動。
 保育園に行きました。
@@ -129,7 +129,7 @@
 まぁ、俺の主観のイメージをなるべく入れずに、楽譜に忠実にではありましたが。
 また、自分らのクラスで練習するから、と俺のピアノ伴奏を録音してCDに焼くこともしましたねぇ。
 なんだかんだで行事ごと自分のクラスより他のクラスの力になってしまっているという(笑)まぁ、我がクラスは金賞をとりましたし、俺個人は伴奏者賞をとりましたし結果オーライです。
-`合唱コンクール - yosida95 on Hatena </2010/11/03/174435.html>`__
+:doc:`/2010/11/03/174435`
 文化祭、合唱コンの他にはソーラン節を踊りましたねぇ。
 うん、それだけ。
 
@@ -176,7 +176,7 @@
 夜を徹した10時間の作業でなんとか完成させられました。
 しっかし、あれですね。
 みんなが1度は映るように、とかの配慮が大変ですね。
-そもそもこの日にMBAが上海から届き、そして雪が降ったので雪だるまを作り(\ `雪やこんこん♪ - yosida95 on Hatena </2011/03/07/181624.html>`__)、それでもって郵便局で定形外郵便やレターパックの発送をしたり、、、忙しさが忙しさを呼ぶんですねぇ。
+そもそもこの日にMBAが上海から届き、そして雪が降ったので雪だるまを作り( :doc:`/2011/03/07/181624` )、それでもって郵便局で定形外郵便やレターパックの発送をしたり、、、忙しさが忙しさを呼ぶんですねぇ。
 やることの順番間違っている気がしねーでもないですがwそんなわけで完成。
 上映されました。
 俺の前に、学年で結成したバンドの演奏をやっていて、盛り上がってて、その後。
@@ -215,7 +215,7 @@
 俺は中学3年間、とても充実していて、なんか寂しくなるとかありませんでした。
 とても晴れ晴れとした、清々しい気持ちで卒業しました。
 中学校3年間はやりきったんでしょうね、完全燃焼したんでしょう。
-`卒業式 - yosida95 on Hatena </2011/03/18/130000.html>`__
+:doc:`/2011/03/18/130000`
 
 この卒業式のあと、また昨日のメンバーであそびました。
 俺の友人の方は卒業式を終えてすぐさま昼も取らず我が家にきました。
