--- a/2011/10/19/121226.rst
+++ b/2011/10/19/121226.rst
@@ -7,7 +7,7 @@
 --------------------------
 
 -  忍者ブログは障害多いしもうごめん
--  開発してきたブログエンジン ( `#pyhack 第11回 Python mini Hack-a-thonに参加してきたよ - yosida95 on Hatena </2011/09/18/030254.html>`__ ) の採用を見送った
+-  開発してきたブログエンジン ( :doc:`/2011/09/18/030254` ) の採用を見送った
 -  この開発していたブログエンジンがはてなダイアリーのシステムに似ている
 -  はてなブックマークをよく利用しているから、ブログもはてなのサービスを使いたい
 -  はてな記法素敵やん
