--- a/2011/10/20/015003.rst
+++ b/2011/10/20/015003.rst
@@ -1,7 +1,7 @@
 VirtualDocumentRoot
 ===================
 
-以前、 `VirtualHostの設定 - yosida95 on Hatena </2011/07/19/211021.html>`__ という記事を書きましたが、 Apache では標準で VirtualDocumentRoot なんていうものがあったんですね。
+以前、 :doc:`/2011/07/19/211021` という記事を書きましたが、 Apache では標準で VirtualDocumentRoot なんていうものがあったんですね。
 知りませんでした。
 
 .. code-block:: apache
