--- a/2012/12/25/064109.rst
+++ b/2012/12/25/064109.rst
@@ -58,7 +58,7 @@ CombConf ってなに
 ~~~~~~~~~~
 
 前述のとおりな役割に居たので、タスク管理をすることは必然でした。
-先日書いた `CombConf を支える技術 〜タスクリマインダー〜 </2012/12/02/100735.html>`__ もその一環です。
+先日書いた :doc:`/2012/12/02/100735` もその一環です。
 どんなタスクが必要で、それをいつまでにやる必要があるのか、というものを挙げていってその進捗を管理していました。
 
 懇親会の開催
