--- a/2013/12/22/000222.rst
+++ b/2013/12/22/000222.rst
@@ -40,10 +40,10 @@
 
 私の詳細な職歴については、以下のエントリもご覧ください。
 
--  `株式会社Decooに就職して、そして退職しました </2012/09/03/211203.html>`__
--  `株式会社ゼロスタートに入社しました! </2012/10/13/222109.html>`__
--  `退職のご報告 </2013/07/31/223353.html>`__
--  `ゲヒルン株式会社に入社しました </2013/08/01/222538.html>`__
+-  :doc:`/2012/09/03/211203`
+-  :doc:`/2012/10/13/222109`
+-  :doc:`/2013/07/31/223353`
+-  :doc:`/2013/08/01/222538`
 
 2013-12-21T15:31:26Z
 ~~~~~~~~~~~~~~~~~~~~
@@ -220,7 +220,7 @@
    -  勉強会での発表は良い経験になります
 
       -  あと1年早ければ `CombConf <http://combconf.com/>`__ というものがありました
-      -  `CombConf という IT カンファレンスを開催してきました #combconf </2012/12/25/064109.html>`__
+      -  :doc:`/2012/12/25/064109`
       -  第2回はありません
 
    -  技術系のバイトはよい経験になります
@@ -240,7 +240,7 @@
 最後に
 ------
 
-こういうエントリを書くと、専門ではない授業の重要性を説かれることになります(例: `No Title (近況報告) </2012/05/15/082821.html>`__ のコメント)。
+こういうエントリを書くと、専門ではない授業の重要性を説かれることになります(例: :doc:`/2012/05/15/082821` のコメント)。
 
 私は、生涯学習の重要性や素晴らしさについては認識しているつもりですが、すでに自らの選択するべき職業について明確に自覚していて、手に職をつけるべきタイプの人間が義務教育を修了した後に専門的では無い事を意識的に、あるいは体系立てて学ぶ必要性やその重要性についてはいまいちピンときていません。
 学びたいことや学ぶべきことについて、それを学ぶ必要が生じた時に生涯学習の一環として学べばよいと考えていることがその理由です。
