--- a/2013/12/31/111207.rst
+++ b/2013/12/31/111207.rst
@@ -38,7 +38,7 @@ yosida95 の2013年を振り返る
     <blockquote class="twitter-tweet" lang="en"><p lang="ja" dir="ltr">もうさ、ぼくが課題研究で開発して成績では5を取ってきたプロダクトのソースコード公開するから、各位はそれを自分の成果として持っていけばいいんじゃないんですかね。課題研究、&quot;できる&quot;人が損する仕組みになっているから、みんなが平等にサボれる用にするための協力ならしますよ。</p>&mdash; Kohei YOSHIDA (@yosida95) <a href="https://twitter.com/yosida95/status/412600146115821568">December 16, 2013</a></blockquote>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-高校関連で今年最も特筆すべきことと言えば、やはり先週公開した「\ `情報科の授業は教養に過ぎないという話 - 東京工業大学附属科学技術高校編 </2013/12/22/000222.html>`__\ 」のことでしょう。
+高校関連で今年最も特筆すべきことと言えば、やはり先週公開した「 :doc:`/2013/12/22/000222` 」のことでしょう。
 300を超えるはてブを獲得し、このブログエントリが基になった派生エントリや、このエントリに言及するエントリも幾つか公開されました。
 
 ブログのコメント欄やブコメで、ぼくの考え方に賛同する意見やぼくを励ます意見、そしてアドバイスなど、多くの建設的な意見を頂きました。
