--- a/2014/01/31/122628.rst
+++ b/2014/01/31/122628.rst
@@ -5,7 +5,7 @@
 ----------
 
 こんにちは yosida95 です。
-昨年書いた「\ `情報科の授業は教養に過ぎないという話 - 東京工業大学附属科学技術高校編 </2013/12/22/000222.html>`__\ 」という記事にまつわるおもしろ事象を twitter にて観測したのでご紹介します。
+昨年書いた「 :doc:`/2013/12/22/000222` 」という記事にまつわるおもしろ事象を twitter にて観測したのでご紹介します。
 
 .. raw:: html
 
