--- a/2014/06/01/123403.rst
+++ b/2014/06/01/123403.rst
@@ -8,7 +8,7 @@
 yosida95 です。
 
 `見てるなう(仮) <https://miteru.yosida95.com/>`__ とは、閲覧中の Web サイトを Twitter で簡単に共有するためのブックマークレットです。
-製作した経緯は\ `見てるなう(仮)を作った </2012/04/28/235534.html>`__\ というエントリにまとめてあります。
+製作した経緯は :doc:`/2012/04/28/235534` というエントリにまとめてあります。
 
 運営を始めて丸 2 年が経ちましたが、おかげさまでユーザーも大変増えました。
 類似サービスの存在はいくつか認識していますが、 Twitter を ``#miteru`` で検索すると、そのほとんどが私が製作した\ `見てるなう(仮) <https://miteru.yosida95.com/>`__\ を利用して投稿されたものであることがわかります。
