--- a/2014/12/29/130000.rst
+++ b/2014/12/29/130000.rst
@@ -10,7 +10,7 @@ yosida95 の 2014 年まとめ
 引っ越し
 --------
 
-`9月12日に実家から秋葉原へと引っ越し </2014/09/19/083000.html>`__\ 、19歳にして初めての1人暮らしをはじめました。
+:doc:`/2014/09/19/083000` 、19歳にして初めての1人暮らしをはじめました。
 通勤時間が大幅に圧縮され、精神的にも体力的にも余裕が生まれました。
 引っ越しと同時に自炊もはじめましたが、小さいころから料理をやっていた素地があったので、楽しみながら凝った美味しいものを食べられるようになったので最高という感じです。
 
@@ -61,7 +61,7 @@ OSS にしたプロダクト
 
    -  Python のクラス定義を JSON Schema に変換するライブラリで、 ORM のように受け取った JSON データから定義クラスのインスタンスを生成することができます
    -  手前味噌ながらかなり便利で、ゲヒルンで開発しているプロダクトの多くで採用しています
-   -  詳しくは `JSONSchema を Python のオブジェクトとマッピングするライブラリを作った </2014/06/15/233351.html>`__ をご覧ください
+   -  詳しくは :doc:`/2014/06/15/233351` をご覧ください
 
 -  `GehirnInc/py3oauth2 <https://github.com/GehirnInc/py3oauth2>`__
 
@@ -97,7 +97,7 @@ OSS にしたプロダクト
 -  `yosida95/golang-gehirndns <https://github.com/yosida95/golang-gehirndns>`__
 
    -  `Gehirn DNS <http://www.gehirn.jp/dns.html>`__ の Go で書かれた API クライアントライブラリ
-   -  詳しくは `Gehirn DNS の Golang API Client を書いた </2014/07/03/163536.html>`__ をご覧ください
+   -  詳しくは :doc:`/2014/07/03/163536` をご覧ください
 
 -  `yosida95/twitter-trailer <https://github.com/yosida95/twitter-trailer>`__
 
