--- a/2015/04/30/130000.rst
+++ b/2015/04/30/130000.rst
@@ -7,7 +7,7 @@
 こんにちは、 yosida95 です。
 宮崎県宮崎市にあるアラタナに向かっています。
 それでは今月も月報を書こうと思います。
-先月分は `2015 年 3 月まとめ </2015/03/31/110000.html>`__\ です。
+先月分は :doc:`/2015/03/31/110000` です。
 
 やったこと
 ----------
