--- a/2015/05/31/123000.rst
+++ b/2015/05/31/123000.rst
@@ -7,7 +7,7 @@
 こんにちは、 yosida95 です。
 今月も月報を書きます。
 私は取り組みを習慣化できないことに定評がありますが、今年から始めた月報はこれで5本目です。
-先月分は `2015 年 4 月まとめ </2015/04/30/130000.html>`__ です。
+先月分は :doc:`/2015/04/30/130000` です。
 
 やったこと
 ----------
@@ -30,7 +30,7 @@
 
 -  17日
 
-   -  `VyOS で Policy Based Routingして複数の ISP を使い分ける </2015/05/17/203841.html>`__ を書いた
+   -  :doc:`/2015/05/17/203841` を書いた
 
 -  25 日
 
@@ -48,7 +48,7 @@
 
 -  31 日
 
-   -  `SSH 公開鍵ユーティリティを Go と Python で作った </2015/05/31/121709.html>`__ を書いた
+   -  :doc:`/2015/05/31/121709` を書いた
 
 所感
 ----
