--- a/2015/06/30/113000.rst
+++ b/2015/06/30/113000.rst
@@ -7,7 +7,7 @@
 こんにちは yosida95 です。
 20 歳になりました。
 今月も月報を書きます。
-先月分は `2015 年 5 月まとめ </2015/05/31/123000.html>`__ です。
+先月分は :doc:`/2015/05/31/123000` です。
 
 やったこと
 ----------
@@ -18,11 +18,11 @@
 
 -  7日
 
-   -  `SMTP で使われる Sender Policy Framework (SPF) のマクロを使う </2015/06/07/220000.html>`__ を書いた
+   -  :doc:`/2015/06/07/220000` を書いた
 
 -  16日
 
-   -  `20歳になった </2015/06/16/123000.html>`__
+   -  :doc:`/2015/06/16/123000`
 
 -  26日
 
