--- a/2015/07/31/220000.rst
+++ b/2015/07/31/220000.rst
@@ -6,7 +6,7 @@
 
 こんにちは yosida95 です。
 今月も月報を書きます。
-先月分は `2015 年 6 月まとめ </2015/06/30/113000.html>`__ です。
+先月分は :doc:`/2015/06/30/113000` です。
 
 やったこと
 ----------
@@ -25,7 +25,7 @@
 
 -  27 日
 
-   -  `/etc/shadow などで使われるハッシュ関数、 crypt(3) を Go 言語で実装しました </2015/07/25/120000.html>`__\ を公開した
+   -  :doc:`/2015/07/25/120000` を公開した
 
 -  31 日
 
