--- a/2015/03/04/110000.rst
+++ b/2015/03/04/110000.rst
@@ -6,7 +6,7 @@
 
 こんばんは yosida95 です。
 今月も月報を書いてみようと思います。
-先月分は `2015 年 1月まとめ </2015/02/02/122434.html>`__ です。
+先月分は :doc:`/2015/02/02/122434` です。
 
 やったこと
 ----------
