--- a/2015/03/31/110000.rst
+++ b/2015/03/31/110000.rst
@@ -5,7 +5,7 @@
 --------
 こんにちは yosida95 です。
 3 月分の月報です。
-2 月分は `2015 年 2 月まとめ </2015/03/04/110000.html>`__\ です。
+2 月分は :doc:`/2015/03/04/110000` です。
 
 やっとこと
 ----------
