--- a/2015/08/31/120000.rst
+++ b/2015/08/31/120000.rst
@@ -6,7 +6,7 @@
 
 こんにちは yosida95 です。
 今月も月報を書きます。
-先月分は `2015 年 7 月まとめ </2015/07/31/220000.html>`__ です。
+先月分は :doc:`/2015/07/31/220000` です。
 
 やったこと
 ----------
