--- a/2015/10/31/200000.rst
+++ b/2015/10/31/200000.rst
@@ -6,7 +6,7 @@
 
 こんにちは yosida95 です。
 今月も月報を書きます。
-先月分は `2015 年 9 月まとめ </2015/09/30/120000.html>`__\ です。
+先月分は :doc:`/2015/09/30/120000` です。
 
 やったこと
 ----------
