--- a/2015/05/31/123000.rst
+++ b/2015/05/31/123000.rst
@@ -81,3 +81,8 @@ yosida95/golang-sshkey
 以上です。
 ありがとうございました。
 来月も頑張るぞい！
+
+.. author:: default
+.. categories:: none
+.. tags:: monthly-report
+.. comments::
