--- a/2015/06/30/113000.rst
+++ b/2015/06/30/113000.rst
@@ -68,3 +68,8 @@ yosida95/timetable
 以上です。
 ありがとうございました。
 来月も頑張るぞい！
+
+.. author:: default
+.. categories:: none
+.. tags:: monthly-report
+.. comments::
