--- a/2015/04/30/130000.rst
+++ b/2015/04/30/130000.rst
@@ -55,3 +55,7 @@
 
 .. |GitHub Streak| image:: https://yosida95.com/photos/0TTJT.raw.png
    :width: 100%
+.. author:: default
+.. categories:: none
+.. tags:: monthly-report
+.. comments::
