translate tags to Japanese

--- a/2010/12/31/115758.rst
+++ b/2010/12/31/115758.rst
@@ -48,3 +48,8 @@ Twitter でも散々言っているとおり、睡眠時間が取れていない
 
 さて、それでは僕自身(最優先w)の、そしてみなさんのさらなる飛躍を願いまして、 2010 年の振り返り記事とします。
 良いお年を。
+
+.. author:: default
+.. categories:: none
+.. tags:: 一年の振り返り
+.. comments::
