remove a mention about an expired domain

--- a/2013/08/01/222538.rst
+++ b/2013/08/01/222538.rst
@@ -29,10 +29,7 @@
 
 前述のとおり、 `id:koba789 <http://blog.hatena.ne.jp/koba789/>`__ や 社長の `@isidai <http://twitter.com/isidai>`__ さん、それから取締役の `@N\_taka <http://twitter.com/N_taka>`__ さんなど以前から面識が有った方々と一緒に働けるということや、従業員の平均年齢的にも設立年的にも若い会社の中で自分がどんな事を成せるのかということに、とてもわくわくしています。
 
-そうそう、わくわく繋がりの余談ですが http://wakuwaku-engineer.jp/ というドメインを取得しました。
-もし wakuwaku-engineer.jp のサブドメインやメールアドレスが欲しいという奇特な方がいらっしゃいましたらご一報下さい。
-
-閑話休題、特に、\ `一緒に70人規模の勉強会を企画・運営した </2012/12/25/064109.html>`__\ り、\ `ぼくの自宅で徹夜ハッカソンをした </2013/01/01/005050.html>`__\ りなど以前から親交があり、また、技術者としても一目置いている `id:koba789 <http://blog.hatena.ne.jp/koba789/>`__ とは以前から一緒に働きたいと思っていたので、これが実現できた事をとても嬉しく思っています。
+特に、\ `一緒に70人規模の勉強会を企画・運営した </2012/12/25/064109.html>`__\ り、\ `ぼくの自宅で徹夜ハッカソンをした </2013/01/01/005050.html>`__\ りなど以前から親交があり、また、技術者としても一目置いている `id:koba789 <http://blog.hatena.ne.jp/koba789/>`__ とは以前から一緒に働きたいと思っていたので、これが実現できた事をとても嬉しく思っています。
 
 .. raw:: html
 
